--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   --secondary-color: #6c757d;
   --light-color: #f8f9fa;
   --dark-color: #343a40;
-  --white-color: white;
+  --white-color: #fff;
   --black-color: black;
 }
 
@@ -202,7 +202,8 @@ body.dark .sidebar li.active-page {
 .flex.flex-wrap {
   flex-wrap: wrap;
 }
-.flex.gap-1 {
+.flex.gap-1,
+.flex.gap-1\:gap{
   gap: 10px;
 }
 .flex.content-center {
@@ -211,7 +212,8 @@ body.dark .sidebar li.active-page {
 .flex.beetwen {
   justify-content: space-between;
 }
-.flex.item-center {align-items: center}
+.flex.item-center,
+.flex.item-center\:stretch{align-items: center}
 
 /*color*/
 .c-danger {
@@ -998,6 +1000,85 @@ body.dark .print:nth-child(2):hover {
 /*	padding: 1rem;*/
 /*}*/
 /* RESPONSIF */
+
+
+/*INFO APP*/
+.fitur-section {
+	padding: 20px;
+	background-color: #fff;
+	color: #333;
+	font-family: Arial, sans-serif;
+	max-width: 900px;
+	margin: 0 auto;
+}
+
+.fitur-section h1 {
+	font-size: 28px;
+	margin-bottom: 20px;
+}
+
+.fitur-section h2 {
+	font-size: 20px;
+	margin-top: 20px;
+	margin-bottom: 8px;
+	color: #1a73e8;
+}
+
+.fitur-section ul {
+	padding-left: 20px;
+	margin-bottom: 15px;
+}
+
+.fitur-section li {
+	margin-bottom: 5px;
+}
+
+.fitur-section code {
+	background-color: #cccccc;
+	padding: 2px 5px;
+	border-radius: 3px;
+	font-family: monospace;
+}
+
+body.dark .fitur-section {
+	background-color: #1e1e1e;
+	color: var(--white-color);
+}
+body.dark .fitur-section code {color: var(--dark-color)}
+
+.btn-filter,
+.btn-reset {
+	padding: .55rem;
+	border-radius: 7px;
+	border: 1px solid var(--border-color);
+	box-shadow: var(--shadow);
+	transition: box-shadow .3s;
+	margin-top: 5px;
+}
+
+.btn-reset {
+	background-color: var(--danger);
+	color: var(--white-color);
+}
+.btn-filter:hover {
+	background-color: rgb(212, 213, 213);
+}
+.btn-reset:hover{background-color: var(--danger-dark)}
+.btn-filter:active,
+.btn-reset:active {
+	box-shadow: none;
+}
+#form-kategori input[name="nama"]{position: relative;}
+#form-kategori input[name="nama"]::after {
+	content: "(CTRL+K)";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	background-color: #1a73e8;
+}
+
 @media (max-width: 768px) {
   .sidebar {
     position: static;
@@ -1041,4 +1122,8 @@ body.dark .print:nth-child(2):hover {
     width: calc(100% - 2rem);
   }
   .d-none\:mobile{display: none}
+  .flex-wrap\:mobile{flex-wrap: wrap}
+  .flex.columns\:mobile{flex-direction: column}
+  .flex.item-center\:stretch{align-items: stretch}
+  .flex.gap-1\:gap{gap: 0}
 }
