--- a/styles/setting.css
+++ b/styles/setting.css
@@ -12,6 +12,12 @@
 	gap: 10px;
 }
 
+#settings {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+#settings details{width: 500px}
 .danger {
 	background-color: #dc3545;
 	color: white;
@@ -49,3 +55,5 @@ ul {
 	-ms-user-select: none; /* Internet Explorer/Edge */
 	user-select: none; /* Standar */
 }
+.dashboard .material-icons,
+.ringkasan .material-icons{color: var(--light-color)}
